option(SIGN_PACKAGE OFF)
option(SIGN_PACKAGE_OUT OFF)
set(BUILD_PACKAGE ON)

message(STATUS "Package Projects.")
if(SIGN_PACKAGE OR BUILD_PACKAGE)
    message(STATUS "Package Projects")
    add_custom_target(packaging ALL DEPENDS ${PROJECT_NAME} COMMENT "Packaging Projects...")
    if(NOT PACKAGE_CONF)
        set(PACKAGE_CONF package/Package)
    endif()
    include(${PACKAGE_CONF})
endif()

if(SIGN_PACKAGE)
    add_custom_target(signing ALL DEPENDS packaging COMMENT "Signing Package...")

    if(BUILD_OS_WINDOWS)
        include(signing/windows.cmake)
    elseif(BUILD_OS_OSX)
        include(signing/osx.cmake)
    elseif(BUILD_OS_LINUX)
        include(signing/linux.cmake)
    else()
        message(STATUS "Do not know how to sign the executable for the current platform! You will need to perform signing manually.")
    endif()
else()
    if(BUILD_OS_WINDOWS)
        if(SIGN_PACKAGE_OUT)
            add_custom_target(signing ALL DEPENDS packaging COMMENT "Signing Package...")
            include(signing/uwindows.cmake)
        endif()
    endif()
endif()

